kubernetes/namespaces/default/wiki/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
spec:
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - image: linuxserver/bookstack:latest
          imagePullPolicy: IfNotPresent
          name: bookstack
          ports:
            - containerPort: 80
              name: bookstack
          volumeMounts:
            - name: bookstack-storage
              mountPath: /config
      volumes:
        - name: bookstack-storage
          persistentVolumeClaim:
            claimName: bookstack-storage
