kubernetes/namespaces/default/wiki/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
spec:
  selector:
    app: bookstack
  ports:
  - name: bookstack
    port: 80
    targetPort: bookstack
