kubernetes/namespaces/default/wiki/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codex-docs
spec:
  ingressClassName: nginx
  rules:
    - host: wiki.hyprr.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack
                port:
                  name: bookstack
